--- a/index.html
+++ b/index.html
@@ -123,6 +123,6 @@
     </div>
   </aside>
 
-  <script src="script.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
